Add a line in the cards to differentiate pic and banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,11 @@ html, body {
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
  
+  .banner {
+    border-top: 2px solid rgb(0, 148, 148);
+    margin-top: 2px;
+  }
+
   #motto {
     text-align: center;
     font-size: 18px;
