--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ html, body {
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
     color: #f5f6f7;
+    background-color: whitesmoke;
   }
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
