--- a/assets/css/crystals.css
+++ b/assets/css/crystals.css
@@ -1,60 +1,37 @@
-.header {
-width: 250px;
-padding:  20px;
-background-color: orange;
-color: white; 
-text-align: center;
+html, body {
+    height: 100%;
+  }
+
+body {
+    background-image:url(../images/crystal-background.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
 }
 
-.instructions {
-padding: 20px;
-background-color: tan;
-width: 400px;
-color: green;
-font-weight: bold;
+#jumbo {
+    background-color: rgba(18, 18, 19, 0.431);
+    padding: 10px 30px 8px 30px;
+    border-radius: 10px;
+    border: 1px solid whitesmoke;
 }
 
-.target {
-background-color: green;
-width: 100px;
-padding: 50px;
-margin-top: 10px;
-margin-bottom: 10px;
-display: block;
-font: 20px;
+#jumbotext1 {
+    font-size: 28px;
+    color: whitesmoke;
 }
 
-.result {
-background-color: cyan;
-padding: 20px;
-margin-top: 20px;
-margin-bottom: 20px;
-display: block;
+#jumbotext2 {
+    font-size: 12px;
+    color: whitesmoke;
 }
 
 .crystal-images {
-width: 200px;
-height: 100px;
+width: 180px;
+height: 90px;
 }
 
-#yts {
-background-color: teal;
-width: 200px;
-color: white;
-font-weight: bold;
-padding-left: 2px;
-margin-top: 5px;
-margin-bottom: 5px;
-}
-
-.score {
-display: block;
-width: 200px;
-height: 100px;
-padding-left: 2px;
-background-color: teal;
-color: white;
-margin-top: 5px;
-margin-bottom: 5px;
-font-weight: bold;
-}
+#results {
+    background-color: rgba(18, 18, 19, 0.431);
+    padding: 10px 30px 8px 30px;
+    border-radius: 10px;
+    border: 1px solid whitesmoke;
