--- a/assets/css/crystals.css
+++ b/assets/css/crystals.css
@@ -18,12 +18,14 @@ body {
 #jumbotext1 {
     font-size: 28px;
     color: whitesmoke;
+    font-weight: 900;
 }
 
 #jumbotext2 {
     font-size: 16px;
     color: whitesmoke;
-    line-height: 14px;
+    line-height: 20px;
+    font-weight: 650;
 }
 
 .crystal-images {
