Added form to mobile

--- a/assets/css/psychic-style.css
+++ b/assets/css/psychic-style.css
@@ -37,3 +37,9 @@ font-size: 22px;
 text-align: center;
 }
 
+#mobile-content{display: none;}
+
+@media screen and (max-width: 768px) {
+    #mobile-content {display: block;}
+    }
+
