--- a/assets/css/collectorStyle.css
+++ b/assets/css/collectorStyle.css
@@ -9,3 +9,135 @@
   #hidden {
     display: none;
   }
+
+  body {
+    background-image:url(../images/collector-background1.jpg);
+    background-repeat:no-repeat;
+    background-size: cover;
+}
+
+#jumbotext1 {
+  font-family: 'Baumans', cursive;
+  font-size: 30px;
+  color: whitesmoke;
+  font-weight: 450;
+}
+
+#jumbotext2{
+  font-family: 'Baumans', cursive;
+  font-size: 24px;
+  color: whitesmoke;
+  font-weight: 450; 
+}
+
+#jumbotext3{
+  font-family: 'Baumans', cursive;
+  font-size: 18px;
+  color: whitesmoke;
+}
+
+#jumbo {
+  background-color: rgba(3, 3, 3, 0.63);
+  padding: 10px 30px 8px 30px;
+  border-radius: 10px;
+  border: 1px solid whitesmoke;
+}
+
+#search-btn{
+  font-family: 'Baumans', cursive;
+  background-color: rgba(3, 3, 3, 0.63);
+  border-color: whitesmoke;
+  margin-top:15px;
+  margin-bottom: 5px;
+}
+
+#search-btn:hover{
+  border-color: rgba(36, 75, 146, 0.691);
+  font-weight: bold;
+}
+
+label{
+  font-family: 'Baumans', cursive;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 20px;
+  margin: 10px;
+}
+
+.input{
+  background-color: rgba(3, 3, 3, 0.63);
+  font-family: 'Baumans', cursive;
+  color: whitesmoke;
+  text-align: center;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: expanded;
+}
+
+.form-text{
+  font-family: 'Baumans', cursive;
+  color: whitesmoke;
+  font-size: 15px;
+  font-weight: normal;
+  font-stretch: expanded;
+
+}
+
+#collection-btn{
+  font-family: 'Baumans', cursive;
+  background-color: rgba(3, 3, 3, 0.63);
+  border-color: whitesmoke;
+  color: whitesmoke;
+  float: right;
+}
+
+#collection-btn:hover{
+  border-color: rgba(36, 75, 146, 0.691);
+  color: whitesmoke;
+}
+
+#wishlist-btn{
+  font-family: 'Baumans', cursive;
+  background-color: rgba(3, 3, 3, 0.63);
+  border-color: whitesmoke;
+  color: whitesmoke;
+  float: right;
+  margin-right: 12px;
+}
+
+#wishlist-btn:hover{
+  border-color: rgba(146, 36, 36, 0.691);
+  background-color: rgba(87, 0, 0, 0.63);
+  color: whitesmoke;
+}
+
+#search-result{
+  font-family: 'Baumans', cursive;
+  font-size: 25px;
+  color: whitesmoke;
+  font-weight: 450; 
+}
+
+#search-banner{
+border-bottom: 2px solid whitesmoke;
+margin-bottom: 5px;
+}
+
+.center{
+  text-align: center;
+}
+
+.h-info{
+  margin-top: 10px;
+  font-family: 'Baumans';
+  font-size: 16px;
+  color: whitesmoke;
+  border-bottom: 2px solid whitesmoke;
+}
+
+.r-price{
+  margin-top: 10px;
+  font-family: 'Baumans';
+  font-size: 16px;
+  color: whitesmoke;
+}
