Implemented solution to inconsistent background image coverage in certain mobile resolutions. Solution was changing height: 100% to min-height: 100%.

--- a/assets/css/gif.css
+++ b/assets/css/gif.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    min-height: 100%;
   }
 
 body {
@@ -54,10 +54,3 @@ margin: 6px;
 #gif-input{
     margin-top: 15px;
 }
-
-@media screen and (max-width: 768px) {
-    .gif-size{
-    width:310px;
-    height: auto;    
-    }
-    }
