--- a/assets/css/crystals.css
+++ b/assets/css/crystals.css
@@ -1,12 +1,7 @@
 html, body {
-    height: 100%;
+    min-height: 100%;
   }
 
-  @media screen and (max-width: 403px) {
-    html, body {
-        height: auto;
-      }
-    }
 
 body {
     background-image:url(../images/crystal-background.jpg);
