--- a/assets/css/psychic-style.css
+++ b/assets/css/psychic-style.css
@@ -1,12 +1,7 @@
 html, body {
-    height: 100%;
+    min-height: 100%;
   }
 
-  @media screen and (max-width: 403px) {
-    html, body {
-        height: 100%;
-      }
-    }
 
 body {
     background-image:url(../images/psychic-background.png);
