--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ img {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  background: ivory;
+  background: ghostwhite;
 }
 
 a:link {
