--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,14 +107,14 @@ html, body {
  }
 
 .card {
-  box-shadow: 2px 4px rgba(0,0,0,0.2);
+  box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 4px;
   margin-bottom: 20px;
 }
 
 .card:hover {
-  box-shadow: 4px 6px rgba(0,0,0,0.2);
+  box-shadow: 6px 8px 8px rgba(0,0,0,0.2);
 }
 
 img {
