--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,10 +165,18 @@ a:active {
   max-width: 35px;
     height: auto;
     display: block;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
     float: right;
     margin-top: 110px;
+  }
+
+  #email{
+    max-width: 40px;
+      height: auto;
+      display: block;
+      float: right;
+      margin-top: 110px;
   }
 
   
