--- a/assets/css/psychic-style.css
+++ b/assets/css/psychic-style.css
@@ -9,6 +9,40 @@ body {
     background-size: cover;
 }
 
+.letter {
+    width: 30px;
+    height: 30px;
+    border-style: solid;
+    padding: 2px;
+    float: left;
+    margin: 2px;
+  }
+
+  .letter-button-color {
+    color: rgb(78, 12, 12);
+    margin: 5px;
+  }
+
+  #display {
+    margin-top: 78px;
+    height: 500px;
+    width: 220px;
+    margin-left: 60px;
+  }
+
+  #buttons {
+    padding: 20px;
+
+  }
+
+  #clear {
+    margin-left: 20px;
+    font-size: 25px;
+    color: black;
+    border-style: solid;
+    width: 100px;
+  }
+
 #jumbo {
     background-color: rgba(18, 18, 19, 0.431);
     padding: 10px 30px 8px 30px;
@@ -44,12 +78,11 @@ padding-bottom: 8px;
     line-height: 15px;   
 }
 
-#mobile-content{display: none;}
+#buttons{display: none;}
 
 @media screen and (max-width: 768px) {
-    #mobile-content {display: block;
+    #buttons {display: block;
     text-align: center;
-    color: rgb(78, 12, 12);
     font-size: 20px;    
     }
     }
