--- a/assets/css/psychic-style.css
+++ b/assets/css/psychic-style.css
@@ -10,12 +10,14 @@ body {
 }
 
 .letter {
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     border-style: solid;
     padding: 2px;
+    padding-bottom: 5px;
     float: left;
     margin: 2px;
+    border-radius: 8px;
   }
 
   .letter-button-color {
@@ -31,8 +33,7 @@ body {
   }
 
   #buttons {
-    padding: 20px;
-
+    padding: 10px 30px 8px 30px;
   }
 
   #clear {
@@ -83,7 +84,8 @@ padding-bottom: 8px;
 @media screen and (max-width: 768px) {
     #buttons {display: block;
     text-align: center;
-    font-size: 20px;    
+    font-size: 20px;
+    font-weight: bold;    
     }
     }
 
